--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Module4Course15
 
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo2
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
